[tool.poetry]
name = "dial-core"
version = "0.6a1"
description = "Deep Learning, node-based framework"
authors = ["David Afonso <davafons@gmail.com>"]

license = "GPLv3"

readme = "README.md"

repository = "https://github.com/dial-app/dial-core"
homepage = "https://github.com/dial-app/dial-core"

keywords = ["deep-learning"]

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = "~2.0"
dependency-injector = "^3.15.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
