[tool.poetry]
name = "dial-core"
version = "0.13a0"
description = "Deep Learning, node-based framework"
authors = ["David Afonso <davafons@gmail.com>"]

license = "GPL-3.0-only"

readme = "README.md"

repository = "https://github.com/dial-app/dial-core"
homepage = "https://github.com/dial-app/dial-core"

keywords = ["deep-learning"]

[tool.poetry.dependencies]
python = ">=3.6,<3.8"

toml = "^0.10.0"
tensorflow = "2.0.0b1"
dependency-injector = "^3.15.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.4"
pre-commit = "^2.1.1"
black = "^19.10b0"
isort = "^4.3.21"
flake8 = "^3.7.9"
pylint = "^2.4.4"
mypy = "^0.761"
tox = "^3.14.5"
docstr-coverage = "^1.0.5"
taskipy = "^1.1.3"
sphinx = "^2.4.4"
sphinx-rtd-theme = "^0.4.3"
sphinx-autodoc-typehints = "^1.10.3"

[tool.taskipy.tasks]
lint = "pre-commit run --all"
tests = "pytest --cov=dial_core/ --cov-report term-missing:skip-covered"
doc-coverage = "docstr-coverage -fi dial_core"
docs = "cd docs; make html"

[build-system]
requires = ["poetry>=0.12", "setuptools>=35.0.2", "wheel>=0.29.0"]
build-backend = "poetry.masonry.api"
